fixed scrolling issue for safari on iphone

--- a/src/random-components/NavBar/NavBar.scss
+++ b/src/random-components/NavBar/NavBar.scss
@@ -13,7 +13,6 @@ $narrow-nav-drop-down-bar-background-color: colors(light-dark-blue);
     background-color: $narrow-nav-drop-down-bar-background-color;   
     box-shadow: 0px 0px 3.3rem 1rem rgba(colors(dark-blue), 0.9);
     overflow: hidden;
-    overflow: hidden;
 
     @include setProps(left right top, $nav-bar-insets);
 
